[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docmost-mcp"
version = "1.0.0"
description = "A Model Context Protocol (MCP) server for Docmost — the open-source collaborative wiki."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Dev Joshi" },
]
keywords = ["mcp", "docmost", "wiki", "documentation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/Dev789/docmost-mcp-server"
Documentation = "https://github.com/Dev789/docmost-mcp-server#readme"
Repository = "https://github.com/Dev789/docmost-mcp-server"
Issues = "https://github.com/Dev789/docmost-mcp-server/issues"

[project.scripts]
docmost-mcp = "docmost_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docmost_mcp"]
